# repro-cquery-toolchains-in-ruleinputs

./: README.md  WORKSPACE  rules.bzl
dir/: BUILD.bazel  echo_hello_to_argv0.sh
